# git-safety-agent

./: .gitignore  README.md  pyproject.toml
examples/: demo_inputs.md
scripts/: run_demo.sh
src/git_safety_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/gsa/: cli.py
src/gsa/agent/: clarifier.py  memory.py  orchestrator.py  planner.py  schema.py
src/gsa/app/: api.py  ui.py
src/gsa/eval/: runner.py  test_cases.yaml
src/gsa/llm/: llm_client.py  prompts.py
src/gsa/mcp/: client.py  registry.py  server.py
src/gsa/observability/: logger.py  report.py
src/gsa/safety/: confirmer.py  policy.py  risk.py  validator.py
src/gsa/tools/: file_impl.py  git_impl.py  index_impl.py
tests/: test_policy.py  test_risk.py  test_validator.py
